...

  @override
  String get aboutAppDescription =>
      'In this app you can discover new movies and TV series, manage your favorites and browse personal collections.';

  @override
  String get settings => 'Settings';

  @override
  String get profile => 'Profile';

  @override
  String get editProfile => 'Edit Profile';

  @override
  String get email => 'Email';

  @override
  String get password => 'Password';
...
  String get successfulLogin => 'Successful login!';

  @override
  String get successfulRegistration => 'Registration successful!';

  @override
  String get watched => 'Watched';

  @override
  String get favorites => 'Favorites';

  @override
  String get signOut => 'Sign Out';
...

  @override
  String get searchHistoryLoginPrompt =>
      'Sign in to save and view search history.';

  @override
  String get search => 'Search';

  @override
  String get searchWithFilters => 'Search with filters';

  @override
  String get authorizationRequired => 'Authorization Required';
...
      'Failed to perform search. Please try again later.';

  @override
  String get cancel => 'Cancel';

  @override
  String get home => 'Home';

  @override
  String votes(int count) {
    return '$count votes';
  }

...
